inputs/source_meta/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Credit_Status__c</fullName>
        <description>##Conga updated btn:00bS0000000NpkJ</description>
        <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;templateid=00PS0000001Pmsa&quot; + 
&quot;&amp;cetid=a6uS0000000ECxD&quot; + 
&quot;&amp;qmode=GoogleDocs&quot;</formula>
        <label>Account Credit Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Email__c</fullName>
        <label>Account Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_SAN__c</fullName>
        <description>SAN the account is activated on</description>
        <inlineHelpText>SAN the account is activated on - cannot be modified</inlineHelpText>
        <label>Account SAN</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <inlineHelpText>This field tells you that the account you are viewing is a SME CHANNEL sales record.</inlineHelpText>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SME_CHANNEL SALES</fullName>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity__c</fullName>
        <description>Refers to a company or organization field of activity. Used as reference in reports.</description>
        <label>Activity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>10</fullName>
                    <label>10: Employees</label>
                </value>
                <value>
                    <fullName>1011</fullName>
                    <label>1011: Procession and preserving of meat and meat products</label>
                </value>
                <value>
                    <fullName>1012</fullName>
                    <label>1012: Processing and preserving of meat, fish, crustaceans and mollusks</label>
                </value>
                <value>
                    <fullName>1020</fullName>
                    <label>1020: Processing and preserving of fruit, vegetables and tubers</label>
                </value>
                <value>
                    <fullName>1030</fullName>
                    <label>1030: Manufacture of vegetable and animal oils and fats</label>
                </value>
                <value>
                    <fullName>1040</fullName>
                    <label>1040: Manufacture of dairy products</label>
                </value>
                <value>
                    <fullName>1051</fullName>
                    <label>1051: Manufacture of grain mill products</label>
                </value>
                <value>
                    <fullName>1052</fullName>
                    <label>1052: Manufacture of starches and starch products</label>
                </value>
                <value>
                    <fullName>1061</fullName>
                    <label>1061: Coffee threshing</label>
                </value>
                <value>
                    <fullName>1062</fullName>
                    <label>1062: Decaffeination, roasting and milling of coffee</label>
                </value>
                <value>
                    <fullName>1063</fullName>
                    <label>1063: Other coffee products </label>
                </value>
                <value>
                    <fullName>1071</fullName>
                    <label>1071: Manufacture and refining of sugar</label>
                </value>
                <value>
                    <fullName>1072</fullName>
                    <label>1072: Manufacture of panela</label>
                </value>
                <value>
                    <fullName>1081</fullName>
                    <label>1081: Manufacture of bakery products</label>
                </value>
                <value>
                    <fullName>1082</fullName>
                    <label>1082: Manufacture of cocoa, chocolate and sugar confectionery</label>
                </value>
                <value>
                    <fullName>1083</fullName>
                    <label>1083: Manufacture of macaroni, noodles, couscous and similar farinaceous products</label>
                </value>
                <value>
                    <fullName>1084</fullName>
                    <label>1084: Manufacture of prepared meals and dishes</label>
                </value>
                <value>
                    <fullName>1089</fullName>
                    <label>1089: Manufacture of other food products n.e.c.</label>
                </value>
                <value>
                    <fullName>1090</fullName>
                    <label>1090: Manufacture of prepared animal feeds</label>
                </value>
                <value>
                    <fullName>1101</fullName>
                    <label>1101: Distilling, rectifying and blending of alcoholic beverages</label>
                </value>
                <value>
                    <fullName>1102</fullName>
                    <label>1102: Manufacture of non-distilled fermented beverages</label>
                </value>
                <value>
                    <fullName>1103</fullName>
                    <label>1103: Manufacture of malt, manufacture of beer and other malt beverages</label>
                </value>
                <value>
                    <fullName>1104</fullName>
                    <label>1104: Manufacture of soft drinks; production of mineral waters and other bottled waters</label>
                </value>
                <value>
                    <fullName>111</fullName>
                    <label>111: Growing of cereals (except rice), leguminous crops and oil seeds</label>
                </value>
                <value>
                    <fullName>112</fullName>
                    <label>112: Growing of rice</label>
                </value>
                <value>
                    <fullName>113</fullName>
                    <label>113: Growing of vegetables, roots and tubers</label>
                </value>
                <value>
                    <fullName>114</fullName>
                    <label>114: Growing of tobacco</label>
                </value>
                <value>
                    <fullName>115</fullName>
                    <label>115: Growing of textile crops</label>
                </value>
                <value>
                    <fullName>119</fullName>
                    <label>119: Other non-perennial crops (not elsewhere classified – n.e.c)</label>
                </value>
                <value>
                    <fullName>1200</fullName>
                    <label>1200: Manufacture of tobacco products</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Add_On_Upfront_Fee_Boleto_Id__c</fullName>
        <label>Add On Upfront Fee Boleto Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_On_Upfront_Fee_Credit_Card_Type__c</fullName>
        <label>Add On Upfront Fee Credit Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visa</fullName>
                </value>
                <value>
                    <fullName>MasterCard</fullName>
                </value>
                <value>
                    <fullName>Cabal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Add_On_Upfront_Fee_Payment_Method__c</fullName>
        <label>Add On Upfront Fee Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CreditCard</fullName>
                </value>
                <value>
                    <fullName>Boleto</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Affiliates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Affiliates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Announcement_Email__c</fullName>
        <description>To store SP email address - to communicate announcement information</description>
        <label>Announcement Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Area_of_Operation__c</fullName>
        <inlineHelpText>This field tells you about the Company Type</inlineHelpText>
        <label>Area of Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BYOB_IP_Address__c</fullName>
        <description>If BYOB is the primary connectivity, is the IP address DHCP or Static IP?</description>
        <label>BYOB IP Address</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DHCP</fullName>
                </value>
                <value>
                    <fullName>Static IP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Backup_Connectivity__c</fullName>
        <description>What is the backup transport option ordered for this site?</description>
        <label>Backup Connectivity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VADB</fullName>
                </value>
                <value>
                    <fullName>VSAT</fullName>
                </value>
                <value>
                    <fullName>3G / 4G</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bank_ABA_Routing_Number__c</fullName>
        <description>Bank ABA Routing Number</description>
        <inlineHelpText>Bank ABA Routing Number</inlineHelpText>
        <label>Bank ABA Routing Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <description>What is (business) bank account number for this company?</description>
        <inlineHelpText>What is (business) bank account number for this company?</inlineHelpText>
        <label>Bank Account Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Address1__c</fullName>
        <description>Address1 where account&apos;s bank is located.</description>
        <inlineHelpText>Address1 where account&apos;s bank is located.</inlineHelpText>
        <label>Bank Address1</label>
        <length>156</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Address2__c</fullName>
        <description>Address2 where account&apos;s bank is located</description>
        <inlineHelpText>Address2 where account&apos;s bank is located</inlineHelpText>
        <label>Bank Address2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Branch__c</fullName>
        <description>What is the (business) bank branch for this company&apos;s bank account?</description>
        <inlineHelpText>What is the (business) bank branch for this company&apos;s bank account?</inlineHelpText>
        <label>Bank Branch</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_City__c</fullName>
        <description>City where account&apos;s bank is located.</description>
        <inlineHelpText>City where account&apos;s bank is located.</inlineHelpText>
        <label>Bank City</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Country__c</fullName>
        <description>The country where the account&apos;s bank is located.</description>
        <inlineHelpText>The country where the account&apos;s bank is located.</inlineHelpText>
        <label>Bank Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <description>What is the name of this company&apos;s (business) bank?</description>
        <inlineHelpText>What is the name of this company&apos;s (business) bank?</inlineHelpText>
        <label>Bank Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_State__c</fullName>
        <description>State where account&apos;s bank is located.</description>
        <inlineHelpText>State where account&apos;s bank is located.</inlineHelpText>
        <label>Bank State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bank_Zip__c</fullName>
        <description>Zip where account&apos;s bank is located</description>
        <inlineHelpText>Zip where account&apos;s bank is located</inlineHelpText>
        <label>Bank Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Barcode__c</fullName>
        <description>This is applicable for address other than Billing Address on the Account Object.</description>
        <inlineHelpText>This is applicable for address other than Billing Address on the Account Object.</inlineHelpText>
        <label>Barcode</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beneficiary_Name_on_Bank_Account__c</fullName>
        <description>Beneficiary Name on Bank Account</description>
        <inlineHelpText>Beneficiary Name on Bank Account</inlineHelpText>
        <label>Beneficiary Name on Bank Account</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingAddrUpdated_Sync_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To denote billing address updates during update account process</description>
        <label>BillingAddrUpdated Sync Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Address_County__c</fullName>
        <description>County corresponding to Billing Address</description>
        <inlineHelpText>County corresponding to Billing Address</inlineHelpText>
        <label>Billing Address County</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address_full__c</fullName>
        <description>Complete billing address for this account.</description>
        <formula>BillingStreet &amp; BR() &amp; 
BillingCity &amp; &quot;, &quot; &amp; BillingState &amp; &quot; &quot; &amp; BillingPostalCode &amp; BR() &amp; 
BillingCountry</formula>
        <inlineHelpText>Complete billing address for this account.</inlineHelpText>
        <label>Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Barcode__c</fullName>
        <description>This is applicable for  Billing Address on the Account Object.</description>
        <inlineHelpText>This is applicable for  Billing Address on the Account Object.</inlineHelpText>
        <label>Billing Barcode</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Complement__c</fullName>
        <label>Billing Complement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>Billing_Country_Code__c</fullName>
        <label>Billing Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CL</fullName>
                    <label>Chile</label>
                </value>
                <value>
                    <fullName>CO</fullName>
                    <label>Colombia</label>
                </value>
                <value>
                    <fullName>EC</fullName>
                    <label>Ecuador</label>
                </value>
                <value>
                    <fullName>PA</fullName>
                    <label>Panama</label>
                </value>
                <value>
                    <fullName>PE</fullName>
                    <label>Peru</label>
                </value>
				<value>
                    <fullName>AR</fullName>
                    <label>Argentina</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Day_of_Month__c</fullName>
        <label>Billing Day of Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                    <default>true</default>
                    <label>25</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_District__c</fullName>
        <label>Billing District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Neighborhood__c</fullName>
        <label>Billing Neighborhood</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brazil_Bank_Account_Number__c</fullName>
        <label>Brazil Bank Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brazil_Bank_Account_Owner__c</fullName>
        <label>Brazil Bank Account Owner</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Brazil_Bank_Account_Verifier_Digit__c</fullName>
        <label>Brazil Bank Account Verifier Digit</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brazil_Bank_Agency_Number__c</fullName>
        <label>Brazil Bank Agency Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brazil_Bank_Agency_Verifier_Digit__c</fullName>
        <label>Brazil Bank Agency Verifier Digit</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brazil_Bank_Code__c</fullName>
        <formula>IF(ISPICKVAL(Brazil_Bank__c,&quot;BANCO DO BRASIL&quot;),&quot;001&quot;,
IF(ISPICKVAL(Brazil_Bank__c,&quot;Bancoob&quot;),&quot;756&quot;,
IF(ISPICKVAL(Brazil_Bank__c,&quot;Banrisul&quot;),&quot;041&quot;,
IF(ISPICKVAL(Brazil_Bank__c,&quot;Bradesco&quot;),&quot;237&quot;,
IF(ISPICKVAL(Brazil_Bank__c,&quot;Caixa Econômica Federal&quot;),&quot;104&quot;,
IF(ISPICKVAL(Brazil_Bank__c,&quot;Itaú-Unibanco&quot;),&quot;341&quot;,
IF(ISPICKVAL(Brazil_Bank__c,&quot;Santander&quot;),&quot;033&quot;,
IF(ISPICKVAL(Brazil_Bank__c,&quot;Sicredi&quot;),&quot;748&quot;,null
)
)
)
)
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brazil Bank Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brazil_Bank__c</fullName>
        <label>Brazil Bank</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Banco do Brasil</fullName>
                </value>
                <value>
                    <fullName>Bancoob</fullName>
                </value>
                <value>
                    <fullName>Bradesco</fullName>
                </value>
                <value>
                    <fullName>Itaú-Unibanco</fullName>
                </value>
                <value>
                    <fullName>Santander</fullName>
                </value>
                <value>
                    <fullName>Sicredi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brazil_States__c</fullName>
        <description>State Names</description>
        <label>Brazil States</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>CE</fullName>
                </value>
                <value>
                    <fullName>DF</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>GO</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MG</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>PA</fullName>
                </value>
                <value>
                    <fullName>PB</fullName>
                </value>
                <value>
                    <fullName>PE</fullName>
                </value>
                <value>
                    <fullName>PI</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>RJ</fullName>
                </value>
                <value>
                    <fullName>RN</fullName>
                </value>
                <value>
                    <fullName>RO</fullName>
                </value>
                <value>
                    <fullName>RR</fullName>
                </value>
                <value>
                    <fullName>RS</fullName>
                </value>
                <value>
                    <fullName>SC</fullName>
                </value>
                <value>
                    <fullName>SE</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>TO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
	<fields>
        <fullName>Billing_State_Province_Code__c</fullName>
        <label>Billing State/Province Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>--None--</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Broadband_Router_Make_Model__c</fullName>
        <description>Make and Model of Broadband Modem</description>
        <label>Make &amp; Model of Broadband Modem</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Activity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Business Activity</label>
        <referenceTo>Business_Activity__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Size__c</fullName>
        <description>Business Size</description>
        <label>Business Size</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Small Business</fullName>
                    <default>true</default>
                    <label>Small Business</label>
                </value>
                <value>
                    <fullName>Woman Owned Small Business</fullName>
                </value>
                <value>
                    <fullName>Veteran Owned Small Business</fullName>
                </value>
                <value>
                    <fullName>Alaskan Native Indian</fullName>
                </value>
                <value>
                    <fullName>Large Business (including non-profit)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CBC_ID__c</fullName>
        <description>Hughes Class A or Class B Customer ID.</description>
        <externalId>true</externalId>
        <inlineHelpText>Hughes Class A or Class B Customer ID. Populated when account is converted to customer.</inlineHelpText>
        <label>Hughes Company ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CNPJ__c</fullName>
        <description>Equivalent of SSN but publicly available data. If less than 18 chars – should be prefixed with appropriate number of 0s</description>
        <inlineHelpText>XX.XXX.XXX/XXXX-XX
Applicable for Brazil Only</inlineHelpText>
        <label>CNPJ</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPF__c</fullName>
        <description>Equivalent of SSN but publicly available data. If less than 14 chars – should be prefixed with appropriate number of 0s</description>
        <inlineHelpText>XXX.XXX.XXX-XX
Applicable for Brazil Only</inlineHelpText>
        <label>CPF</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_PS_Company_BO_ID__c</fullName>
        <description>CRM PS Company BO ID</description>
        <externalId>true</externalId>
        <inlineHelpText>CRM PS Company BO ID</inlineHelpText>
        <label>CRM PS Company BO ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Call_Center_Days_Hours__c</fullName>
        <label>Call Center Days Hours</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Call_Center_Location__c</fullName>
        <label>Call Center Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic</fullName>
                </value>
                <value>
                    <fullName>Abroad</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Center_Physical_Address__c</fullName>
        <description>This is Physical Address</description>
        <label>Call Center Physical Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Center_Seats__c</fullName>
        <label>Call Center Seats</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Center_Total_Inbound_Calls__c</fullName>
        <label>Call Center Total Inbound Calls</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Center__c</fullName>
        <description>Does this business use a call center?</description>
        <inlineHelpText>Does this business use a call center?</inlineHelpText>
        <label>Call Center</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Can_Browser_the_Internet_Today__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the circuit working today with the current connection</description>
        <label>Is Circuit Working?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chronic__c</fullName>
        <formula>IF( Hsvc_ChronicSite__c ,IMAGE(&apos;/resource/IsChronic&apos;, &apos;Is Chronic&apos;),IMAGE(&apos;/resource/IsNotChronic&apos;, &apos;Is Not Chronic&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chronic</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Churn_Risk__c</fullName>
        <description>Churn Risk</description>
        <inlineHelpText>Churn Risk</inlineHelpText>
        <label>Churn Risk</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_Channel__c</fullName>
        <inlineHelpText>This field tells you about the Company&apos;s Communication Channel</inlineHelpText>
        <label>Communication Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CV</fullName>
                </value>
                <value>
                    <fullName>E-mail Type 1</fullName>
                </value>
                <value>
                    <fullName>E-mail Type 2</fullName>
                </value>
                <value>
                    <fullName>E-mail Type 3</fullName>
                </value>
                <value>
                    <fullName>FTP</fullName>
                </value>
                <value>
                    <fullName>HTTP</fullName>
                </value>
                <value>
                    <fullName>Integration Broker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>